# Kanban

./: docker-compose.yaml  pyproject.toml
applications/custom_user/: apps.py  models.py
applications/custom_user/migrations/: 0001_initial.py
applications/kanban/: admin.py  apps.py  models.py  schema.py  urls.py
applications/kanban/migrations/: 0001_initial.py  0002_alter_task_creator.py  0003_alter_task_column.py  0004_remove_column_task_column_tasks_alter_task_column.py  0005_rename_tasks_column_task_alter_task_column.py  0006_remove_column_task.py  0007_alter_task_status.py  0008_remove_task_creator.py
config/: settings.py  urls.py
docker/backend/: Dockerfile
