[tool.poetry]
name = "kanban-test"
version = "0.1.0"
description = ""
authors = ["Abdulatif Abdyrazakov <abdyrazakov.1357@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-decouple = "^2.1"
python-decouple = "^3.8"
graphene-django = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
